fix: overflow-y: hidden for overflow-carousel viewport

--- a/src/mixins/organisms/overflow-carousel.scss
+++ b/src/mixins/organisms/overflow-carousel.scss
@@ -24,6 +24,7 @@
     display: flex;
     flex-direction: row !important;
     overflow-x: auto;
+    overflow-y: hidden;
     scroll-behavior: smooth;
     -webkit-overflow-scrolling: touch;
     flex-wrap: nowrap;
